--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>We pretend we have logged in on some other page</h1>
+        
+        and now proceed to the <a href ="ShowEmployees">ShowEmployees</a> page.
     </body>
 </html>
